hero responsive fini + spec responsive fini

--- a/src/_partials/_footer.html
+++ b/src/_partials/_footer.html
@@ -1,4 +1,4 @@
-<section class="footer">
+<!-- <section class="footer">
     <div class="wrapper">
         <div class="lineFooter">
             <div class="l"></div>
@@ -51,7 +51,7 @@
             </div>
         </div>
     </div>
-</section>
+</section> -->
 
 </body>
 </html>
