--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,5 @@
 {% include "_partials/_header.html" %}
 
-<!-- Votre contenu ici -->
 <div class="nav_right">
     <a class="point point_hero" href="#hero"></a>
     <a class="point point_spec" href="#spec"></a>
@@ -86,7 +85,7 @@
     </div>
 </section>
 
-<section class="config js-section" id="config">
+<!-- <section class="config js-section" id="config">
     <div class="wrapper">
         <div class="ligne">
             <h2>Adaptez-le à votre décor</h2>
@@ -114,9 +113,9 @@
             </div>
         </div>
     </div>
-</section>
+</section> -->
 
-<section class="avis js-section" id="avis">
+<!-- <section class="avis js-section" id="avis">
     <div class="wrapper">
         <div class="ligne">
             <h2>Vos avis, notre fierté</h2>
@@ -222,13 +221,11 @@
 
                 <div class="swiper-button-flex">
                     <button class="custom-button-prev">
-                        <!-- Ton icône gauche -->
                         <svg class="icon icon--xl">
                             <use xlink:href="#icon-arrowLeft"></use>
                         </svg>
                     </button>
                     <button class="custom-button-next">
-                        <!-- Ton icône droite -->
                         <svg class="icon icon--xl">
                             <use xlink:href="#icon-arrowRight"></use>
                         </svg>
@@ -237,9 +234,9 @@
             </div>
         </div>
     </div>
-</section>
+</section> -->
 
-<section class="appli js-section last-section" id="appli">
+<!-- <section class="appli js-section last-section" id="appli">
     <div class="wrapper">
         <div class="ligne">
             <div class="contenu">
@@ -270,6 +267,6 @@
             </div>
         </div>
     </div>
-</section>
+</section> -->
 
 {% include "_partials/_footer.html" %}
