--- a/src/_partials/_footer.html
+++ b/src/_partials/_footer.html
@@ -1,4 +1,4 @@
-<!-- <section class="footer">
+<section class="footer">
     <div class="wrapper">
         <div class="lineFooter">
             <div class="l"></div>
@@ -17,7 +17,7 @@
                     </div>
             </div>
             <div class="foot">
-                <nav class="main__nav">
+                <nav class="main__nav foot__nav">
                     <ul>
                         <li><a href="#spec" class="link-item--underline link-item--underline-reverse">Spécification</a></li>
                         <li><a href="#config" class="link-item--underline link-item--underline-reverse">Configuration</a></li>
@@ -51,7 +51,7 @@
             </div>
         </div>
     </div>
-</section> -->
+</section>
 
 </body>
 </html>
