--- a/src/index.html
+++ b/src/index.html
@@ -116,11 +116,11 @@
     </div>
 </section>
 
-<!-- <section class="avis js-section" id="avis">
+<section class="avis js-section" id="avis">
     <div class="wrapper">
         <div class="ligne">
             <h2>Vos avis, notre fierté</h2>
-            <div class="swiper cards" data-component="Carousel" data-slides="2.5" data-space="64">
+            <div class="swiper cards" data-component="Carousel" data-slides="2.5" data-space="64" data-split>
                 <div class="swiper-wrapper">
                     <div class="swiper-slide card">
                         <img src="assets/images/Leslie.jpg" alt="">
@@ -235,9 +235,9 @@
             </div>
         </div>
     </div>
-</section> -->
+</section>
 
-<!-- <section class="appli js-section last-section" id="appli">
+<section class="appli js-section last-section" id="appli">
     <div class="wrapper">
         <div class="ligne">
             <div class="contenu">
@@ -268,6 +268,6 @@
             </div>
         </div>
     </div>
-</section> -->
+</section>
 
 {% include "_partials/_footer.html" %}
