arrangement bug + composante

--- a/src/_partials/_header.html
+++ b/src/_partials/_header.html
@@ -13,7 +13,7 @@
 
     <body>
 
-        <header class="header">
+        <header class="header" data-component="Header">
             <div class="wrapper">
                 <a class="logo">
                     <h4 class="top">Shell</h4>
@@ -21,10 +21,10 @@
                 </a>
                 <nav class="main__nav">
                     <ul>
-                        <li><a href="#spec" class="nav-primary__item link-item--underline link-item--underline-reverse">Spécification</a></li>
-                        <li><a href="#config" class="link-item--underline link-item--underline-reverse">Configuration</a></li>
-                        <li><a href="#avis" class="link-item--underline link-item--underline-reverse">Témoignage</a></li>
-                        <li><a href="#appli" class="link-item--underline link-item--underline-reverse">Application</a></li>
+                        <li><a href="index.html#spec" class="nav-primary__item link-item--underline link-item--underline-reverse">Spécification</a></li>
+                        <li><a href="index.html#config" class="link-item--underline link-item--underline-reverse">Configuration</a></li>
+                        <li><a href="index.html#avis" class="link-item--underline link-item--underline-reverse">Témoignage</a></li>
+                        <li><a href="index.html#appli" class="link-item--underline link-item--underline-reverse">Application</a></li>
                         <li><a href="" class="btn btn-sm"><span class="text_btn">Acheter</span></a></li>
                     </ul>
                 </nav>
@@ -37,10 +37,10 @@
 
                 <nav class="nav_mobile">
                     <ul>
-                        <li><a href="#spec" class="nav-primary__item link-item--underline link-item--underline-reverse">Spécification</a></li>
-                        <li><a href="#config" class="link-item--underline link-item--underline-reverse">Configuration</a></li>
-                        <li><a href="#avis" class="link-item--underline link-item--underline-reverse">Témoignage</a></li>
-                        <li><a href="#appli" class="link-item--underline link-item--underline-reverse">Application</a></li>
+                        <li><a href="#spec" class="js-menu-item nav-primary__item link-item--underline link-item--underline-reverse">Spécification</a></li>
+                        <li><a href="#config" class="js-menu-item link-item--underline link-item--underline-reverse">Configuration</a></li>
+                        <li><a href="#avis" class="js-menu-item link-item--underline link-item--underline-reverse">Témoignage</a></li>
+                        <li><a href="#appli" class="js-menu-item link-item--underline link-item--underline-reverse">Application</a></li>
                     </ul>
                 </nav>
             </div>
