--- a/src/_partials/_header.html
+++ b/src/_partials/_header.html
@@ -11,11 +11,11 @@
         <script src="scripts/main.js" defer></script>
     </head>
 
-    <body>
+    <body data-component="Scrolly">
 
         <header class="header" data-component="Header">
             <div class="wrapper">
-                <a class="logo">
+                <a href="index.html" class="logo">
                     <h4 class="top">Shell</h4>
                     <p class="bottom">Sound</p>
                 </a>
