--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
             </svg>
         </div>
         <div class="ligne">
-            <div class="contenu">
+            <div class="contenu" data-scrolly="fromRight">
                 <p class="brand">SHELL Sound</p>
 
                 <div class="swiper swiper_hero" data-component="Carousel" data-direction="vertical" data-loop data-autoplay>
@@ -33,7 +33,7 @@
                 <p>à portée de main,<br>à chaque instant</p>
                 <a href="" class="btn btn-lg"><span class="text_btn">Acheter</span></a>
             </div>
-            <div class="media">
+            <div class="media" data-scrolly="fromRight">
                 <img src="assets/images/hero.png" alt="Haut-parleur Shell Sound">
             </div>
         </div>
@@ -63,7 +63,7 @@
             <h2>Votre nouvel allié au quotidien</h2>
             <h3>Que ce soit pour planifier, divertir ou informer, cet assistant est conçu pour s’adapter à votre mode de vie.</h3>
             <p>Avec ses commandes vocales, son écran interactif et ses multiples fonctionnalités, il simplifie chaque moment de votre journée, de votre réveil à votre détente.</p>
-            <div class="stats">
+            <div class="stats" data-scrolly="gap">
                 <div class="stat">
                     <p class="top"><span>8</span>po</p>
                     <p class="bottom">D’écran tactile LED</p>
@@ -88,7 +88,7 @@
 <section class="config js-section" id="config">
     <div class="wrapper">
         <div class="ligne">
-            <h2>Adaptez-le à votre décor</h2>
+            <h2 data-scrolly="fromBottom">Adaptez-le à votre décor</h2>
 
             <div class="grid-2">
                 <img class="js-configImg1" src="assets/images/bleuGlacial1.jpg" alt="">
@@ -120,7 +120,7 @@
     <div class="wrapper">
         <div class="ligne">
             <h2>Vos avis, notre fierté</h2>
-            <div class="swiper cards" data-component="Carousel" data-slides="2.5" data-space="64" data-split>
+            <div class="swiper cards" data-component="Carousel" data-slides="2.5" data-space="64" data-split data-scrolly="cardGap">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide card">
                         <img src="assets/images/Leslie.jpg" alt="">
@@ -241,7 +241,7 @@
     <div class="wrapper">
         <div class="ligne">
             <div class="contenu">
-                <h2>Votre assistant, partout avec vous</h2>
+                <h2 data-scrolly="fromBottom">Votre assistant, partout avec vous</h2>
                 <h3>L'application mobile rend votre assistant encore plus puissant.</h3>
                 <p>Programmez, personnalisez et contrôlez toutes les fonctionnalités de votre assistant depuis votre téléphone. </p>
                 <div class="cta">
