--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,6 @@
 {% include "_partials/_header.html" %}
 
-<div class="nav_right">
+<div class="nav_right" data-component="Points">
     <a class="point point_hero js-point" href="#hero"></a>
     <a class="point point_spec js-point" href="#spec"></a>
     <a class="point point_config js-point" href="#config"></a>
@@ -85,7 +85,7 @@
     </div>
 </section>
 
-<section class="config js-section" id="config">
+<section class="config js-section" id="config" data-component="ChangeColor">
     <div class="wrapper">
         <div class="ligne">
             <h2 data-scrolly="fromBottom">Adaptez-le à votre décor</h2>
